apps/docs/src/app/v4/getting-started/page.mdx
import { DocsPage } from '@/components/docs';
import { pageMetadata } from '@/constants';
import FolderStructure from '@/components/folder-structure';

export const metadata = pageMetadata.gettingStarted;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# Getting Started

To optimize bundle size and enable developers to install only the packages they need,
this package is split into independent modules.

You can explore the folder structure and its contents by expanding the tree nodes.

<FolderStructure docsVersion={4} />

- [Mui](/v4/components/mui) - Includes core Material-UI components such as TextField,
Select, and others.
- [Mui-Pickers](/v4/components/mui-pickers) - Contains Material-UI date and
time picker components, along with their variations - `Desktop`, `Mobile` and `Static`.
- [Misc](/v4/components/misc) - Features external form components, such as the
rich text editor, that are not part of Material-UI.
- [Config](/v4/customization) - Provides a Context Provider to set default styles
for all components and configure the `dateAdapter` for date and time pickers.
- [Form Helpers](/v4/form-helpers) - Utility functions used internally by the components,
which can also be leveraged by developers for processing and validating form data.

To minimize the bundle size during the build process, this package includes both
named and default exports within each module. Similar to Material-UI, developers
are encouraged to use default import syntax to [reduce bundle size](https://v7.mui.com/material-ui/guides/minimizing-bundle-size/).

The type for each component can also be imported to modify or customize an
existing component.

## Working

Each component requires a set of common props, detailed in the table below.
Some props might be specific to a component, say [DatePicker](/v4/components/mui-pickers/RHFDatePicker),
and can be viewed in the documentation page for the respective component.
The properties marked as required are mandatory for that component.

_You can also import the interface of each component, like `RHFDatePickerProps`
to extend an existing component or create another reusable component from it._

| Prop | Description | Type | Required |
|-|-|-|-|
| `fieldName` | Name of the field registered with React Hook Form. | `string` | Yes |
| `control` | The `control` object returned by React Hook Form's `useForm` hook. | `UseFormControl` | Yes |
| `registerOptions` | React Hook Form validation rules. | `RegisterOptions` | No |
